--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "core/Modules/src"
         },
         "classmap": [
             "database/seeds",
