--- a/src/banhmichuhung/composer.json
+++ b/src/banhmichuhung/composer.json
@@ -12,7 +12,8 @@
         "doctrine/dbal": "2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
