--- a/src/banhmichuhung/composer.json
+++ b/src/banhmichuhung/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-backup": "^6.7",
         "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
